traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:30: error: Missing closing brace `}' assumed here
        }
        ^TraversalZigZag:36: error: Missing closing brace `}' assumed here
	override def forward(i:Int)  { 
        ^TraversalZigZag:36: error: illegal start of statement (no modifiers allowed here)
	override def forward(i:Int)  { 
        ^TraversalZigZag:39: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^TraversalZigZag:42: error: illegal start of statement (no modifiers allowed here)
	override def backward(i:Int) {
        ^TraversalZigZag:45: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^TraversalZigZag:48: error: Missing closing brace `}' assumed here
}
^